English home page
updated photo captions

--- a/indexAn.html
+++ b/indexAn.html
@@ -51,10 +51,10 @@
     <div class = "2018">
       <div class = "gallery">
       <a target = "_blank">
-        <img  id = "myimg0" alt = "Un merveilleux coucher de soleil! Nous avons essayé de notre mieux de le capturer avec nos pinceaux." src = "images/broadwayBridge.jpg" width = "300" height="200">
+        <img  id = "myimg0" alt = "Thanks Brynn for a memorable last night in the city! I would say we were decently sucessful at capturing the sunset on paper!" src = "images/broadwayBridge.jpg" width = "300" height="200">
       </a>
       <p class = "date">27.04.18 Saskatoon, SK</p>
-      <p class = "desc">Peinture sous le pont</p>
+      <p class = "desc">Painting under Broadway</p>
     </div>
     <div class = "modal" id = "mymod0">
       <span class = "close">&times</span>
@@ -67,7 +67,7 @@
     <a target = "_blank">
       <div class = "cheer">
         <img id = "myimg1" src = "images/cheer.jpg" 
-          alt = "Je suis extrèmement fière de ce que nous avons accompli comme équipe. Voici ma première performance et je dirai qu'elle a eu un succès."
+          alt = "This was my first cheer performance. I am so proud of everything the team and I have accomplished this season! Can't wait until next year!"
           width = "300" height = "200">
       </div>
       <div class = "cheer" style = "display: none;">
@@ -78,7 +78,7 @@
       </div>
     </a>
     <p class = "date">18.03.18 Waterloo, ON </p>
-    <p class = "desc">Ne laisse pas tomber les filles!</p>
+    <p class = "desc">Hit 3! Hold 4! Down 5!</p>
   </div>
   <div class = "modal" id = "mymod1">
     <span class = "close">&times</span>
@@ -88,7 +88,7 @@
 
   <div class = "gallery">
     <a target = "_blank">
-      <img id = "myimg2" src = "images/saintPatricks.jpg"
+      <img  alt = "No matter how cold, it's always smiles when I'm with you" id = "myimg2" src = "images/saintPatricks.jpg"
       width = "300" height = "200">
     </a>
     <p class = "date">17.03.18 Waterloo, ON </p>
@@ -103,7 +103,7 @@
   <div class = "gallery">
     <a target = "_blank"> <!--onclick = "nextSlide(0, 'taylor')">-->
       <div class = "taylor">
-        <img id = myimg3 src = "images/turtleTaylor.jpg" alt = "Mom neveu, Taylor. Bienvenue sur terre"
+        <img id = myimg3 src = "images/turtleTaylor.jpg" alt = "Welcome on earth, Taylor. Can't wait to meet you!"
       width = "300" height = "200">
       </div>
       <div class = "taylor" style="display: none;">
@@ -111,7 +111,7 @@
       </div>
     </a>
     <p class = "date">12.03.18 Saskatoon, SK</p>
-    <p class = "desc">Turtle Taylor</p>
+    <p class = "desc">My little turtle Taylor</p>
   </div>
   <div class = "modal" id = "mymod3">
     <span class = "close">&times</span>
@@ -122,7 +122,7 @@
 
   <div class = "gallery">
     <a target = "_blank">
-      <img alt = "" id = "myimg4" src = "images/mathBall.jpg"
+      <img alt = "Oh Jason... why can't you smile for once?" id = "myimg4" src = "images/mathBall.jpg"
       width = "300" height = "200">
     </a>
     <p class = "date">09.02.18 Waterloo, ON</p>
@@ -144,7 +144,7 @@
 
   <div class = "gallery">
     <a target = "_blank">
-      <img id = "myimg5" src = "images/toronto.jpg" alt = ""
+      <img id = "myimg5" src = "images/toronto.jpg" alt = "It's been almost a year since my move, but the big city still scares me."
       width = "300" height = "200">
     </a>
     <p class = "date">02.09.17 Toronto, ON </p>
@@ -158,7 +158,7 @@
 
   <div class = "gallery">
     <a target = "_blank">
-      <img id = "myimg6" src = "images/cranberryFlats.jpg" alt = "hehehe"
+      <img id = "myimg6" src = "images/cranberryFlats.jpg" alt = "These are my besties. I love them all so much. I miss you all everyday. This was the best day of my life. <3"
       width = "300" height = "200">
     </a>
     <p class = "date">26.08.17 Cranberry Flats, SK</p>
@@ -198,7 +198,7 @@
 
   <div class = "gallery" >
     <a target = "_blank">
-      <img alt = "" id = "myimg7" src = "images/recital.jpg" 
+      <img alt = "We did our best run through when it counted most. This performance was our last, and definitely one to remember." id = "myimg7" src = "images/recital.jpg" 
       width = "300" height = "200">
     </a>
     <p class = "date">04.07.17 Saskatoon, SK </p>
@@ -231,11 +231,11 @@
 
   <div class = "gallery">
     <a target = "_blank">
-      <img id = "myimg8" src = "images/nice.jpg" alt = ""
+      <img id = "myimg8" src = "images/nice.jpg" alt = "Skipping rocks by the sea shore"
       width = "300" height = "200">
     </a>
     <p class = "date">16.04.17 Nice, France</p>
-    <p class = "desc"> Skipping rocks by the sea shore</p>
+    <p class = "desc">Our first night in France</p>
   </div>
   <div class = "modal" id = "mymod8">
     <span class = "close">&times</span>
@@ -245,11 +245,11 @@
 
   <div class = "gallery" >
     <a target = "_blank">
-      <img alt = "" id = "myimg9" src = "images/berryBarn.jpg"
+      <img alt = "Skipped third, late to fourth... all worth it for some Saskatoon berry waffles and some beautiful photos with my besties" id = "myimg9" src = "images/berryBarn.jpg"
       width = "300" height = "200">
     </a>
     <p class = "date">11.04.17 just off Valley Road, SK</p>
-    <p class = "desc">Saskatoon berry waffles <3 </p>
+    <p class = "desc"><span style = "font-size: 18px">Saskatoon berry waffles ❤️</span></p>
   </div>
   <div class = "modal" id = "mymod9">
     <span class = "close">&times</span>
@@ -259,7 +259,7 @@
 
   <div class = "gallery">
     <a target = "_blank">
-      <img alt = "" id = "myimg10" src = "images/banff.jpg"
+      <img alt = "Most relaxing band trip to date... we learned the least and ate the most" id = "myimg10" src = "images/banff.jpg"
       width = "300" height = "200">
     </a>
     <p class = "date">26.03.17 Banff, AB</p>
@@ -289,7 +289,7 @@
 
   <div class = "gallery">
     <a target = "_blank">
-      <img src = "images/delaronde.jpg" alt = "" id = "myimg11"
+      <img src = "images/delaronde.jpg" alt = "Just a nice walk after school" id = "myimg11"
       width = "300" height = "200">
     </a>
     <p class = "date">26.09.16 Saskatoon, SK</p>
@@ -303,11 +303,11 @@
 
   <div class = "gallery">
     <a target = "_blank">
-      <img alt = "" id = "myimg12" src = "images/cornMaze.jpg"
+      <img alt = "Lost and frozen for two hours... starting to doubt weather it was worth the free freezies" id = "myimg12" src = "images/cornMaze.jpg"
       width = "300" height = "200">
     </a>
-    <p class = "date">04.09.16 just off Valley Road, SK</p>
-    <p class = "desc"></p>
+    <p class = "date"><span style = "font-size:18px">04.09.16 just off Valley Road, SK</span></p>
+    <p class = "desc">The classic corn maze</p>
   </div>
   <div class = "modal" id = "mymod12">
     <span class = "close">&times</span>
@@ -317,10 +317,11 @@
 
   <div class = "gallery">
     <a target = "_blank">
-      <img alt = "" id = "myimg13" src = "images/plagePohenegamook.jpg"
+      <img alt = "thanks to Mr. Sun, I got a nice tan line across my bum" id = "myimg13" src = "images/plagePohenegamook.jpg"
       width = "300" height = "200">
     </a>
     <p class = "date"><span style = "font-size:18px">23.07.16 Plage Pohénégamook, QC</span></p>
+    <p class = "desc">my favourite excusion</p>
   </div>
   <div class = "modal" id = "mymod13">
     <span class = "close">&times</span>
@@ -331,7 +332,7 @@
 
   <div class = "gallery">
     <a target = "_blank">
-      <img alt = "" id = "myimg14" src = "images/laPocatiere.jpg"
+      <img alt = "These 5 weeks were some of the most memorable of my entire life" id = "myimg14" src = "images/laPocatiere.jpg"
       width = "300" height = "200">
     </a>
     <p class = "date">20.07.16 La Pocatière, QC</p>
@@ -397,11 +398,11 @@
 
   <div class = "gallery">
     <a target = "_blank">
-      <img alt = "" id = "myimg15" src = "images/sanFran.jpg"
+      <img alt = "Maybe one day I'll be as successful as my brother to land a job in Cali" id = "myimg15" src = "images/sanFran.jpg"
       width = "300" height = "200">
     </a>
     <p class = "date">29.08.15 San Francisco, CA</p>
-    <p class = "desc">My tech dreams</p>
+    <p class = "desc">Cali or Bust?</p>
   </div>
   <div class = "modal" id = "mymod15">
     <span class = "close">&times</span>
@@ -419,10 +420,11 @@
 
   <div class = "gallery">
     <a target = "_blank">
-      <img alt = "" id = "myimg16" src = "images/cypress.jpg"
+      <img alt = "Sunset from Saskatchewan's highest peak" id = "myimg16" src = "images/cypress.jpg"
       width = "300" height = "200">
     </a>
     <p class = "date">16.08.15 Cypress Hills, SK</p>
+    <p class = "desc">Annual camping with the famjam</p>
   </div>
   <div class = "modal" id = "mymod16">
     <span class = "close">&times</span>
