--- a/indexAn.html
+++ b/indexAn.html
@@ -15,9 +15,6 @@
   </head>
   <body>
   <header>
-    <!--<svg width = "100" height = 400>
-      <rect width = 0 height = 400 style = "fill: #A8B8E6;"/>
-    </svg>-->
      <div class = "centered">
         <!--<img src = "images/profile.jpg">-->
         <h1>hello,<br> my name is <br> <span style = "font-size: 60px;">Casey Niu.</span></h1>
@@ -25,7 +22,7 @@
         <p>Welcome to my little slice of the internet! Feel free to look around.</p><br><p>I'm a second year computer science student at the University of Waterloo. I was born and raised in Saskatoon, Saskatchewan. I graduated high school with French immersion and now I'm always looking for ways to incorporate the French language in my life. And here's one now!</p>
       </div>
       <br>
-        <p class = "godown" style = "text-align:center;"><strong>&#8659;</strong></p>
+        <p class = "godown fa fa-arrow-down" style = "text-align:center;"></p>
     </div>
 
   	<div class = "topnav">
@@ -248,7 +245,7 @@
       <img alt = "Skipped third, late to fourth... all worth it for some Saskatoon berry waffles and some beautiful photos with my besties" id = "myimg9" src = "images/berryBarn.jpg"
       width = "300" height = "200">
     </a>
-    <p class = "date">11.04.17 just off Valley Road, SK</p>
+    <p class = "date"><span style = "font-size:18px">11.04.17 just off Valley Road, SK</span></p>
     <p class = "desc"><span style = "font-size: 18px">Saskatoon berry waffles ❤️</span></p>
   </div>
   <div class = "modal" id = "mymod9">
@@ -424,7 +421,7 @@
       width = "300" height = "200">
     </a>
     <p class = "date">16.08.15 Cypress Hills, SK</p>
-    <p class = "desc">Annual camping with the famjam</p>
+    <p class = "desc">Annual camping trip</p>
   </div>
   <div class = "modal" id = "mymod16">
     <span class = "close">&times</span>
@@ -438,7 +435,7 @@
       width = "300" height = "200">
     </a>
     <p class = "date">13.08.15 Saskatoon, SK</p>
-    <p class = "desc">Folk Festival | Ambassador dance in Mesopotamia</p>
+    <p class = "desc">Ambassador dance in Mesopotamia</p>
   </div>
 
     <div class = "newGallery"></div>
