--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div class = "centered">
         <h1>salut,<br> je m'appelle <br> <span style = "font-size: 60px;">Casey Niu.</span></h1>
         <div class = "box">
-        <p>Bienvenue à mon petit morceau de l'Internet! N'hésitez pas à regarder autour.</p><br><p>Je suis un élève de deuxième année à l'Univeristé de Waterloo en étudiant l'informatique. Je suis née à Saskatoon, SK où j'ai vécu pendant tout mon adolescence. À l'école secondaire, je suis licenciée du programme français immersion alors maintenant, je cherche toujours des façons d'utiliser la langue dans ma vie. Voici en un!</p>
+        <p>Bienvenue à mon petit morceau de l'Internet! N'hésitez pas à regarder autour.</p><br><p>Je suis un élève de deuxième année à l'Univeristé de Waterloo en étudiant l'informatique. Je suis née à Saskatoon, SK où j'ai vécu pendant tout mon adolescence. À l'école secondaire, je suis licenciée du programme français immersion alors maintenant, je cherche toujours des façons d'utiliser la langue dans ma vie. En voici un!</p>
       </div>
       <br>
         <p class = "godown fa fa-arrow-down" style = "text-align:center;"></p>
